--- a/HelloWorldFunction/build.gradle
+++ b/HelloWorldFunction/build.gradle
@@ -1,12 +1,17 @@
 plugins {
     id 'java'
+    id 'maven'
 }
 
 repositories {
     mavenCentral()
+    maven {
+        url "http://localhost:8081/nexus/content/repositories/releases"
+    }
 }
 
 dependencies {
+    implementation 'hw.libs.common:HelloWorldLib:0.0.1'
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.0'
     implementation 'com.amazonaws:aws-lambda-java-events:3.1.0'
     testImplementation 'junit:junit:4.12'
