--- a/HelloWorldFunction/build.gradle
+++ b/HelloWorldFunction/build.gradle
@@ -11,11 +11,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'hw.libs.common:HelloWorldLib:0.0.1'
+    implementation 'hw.libs.common:helloworldlib:0.0.1'
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.0'
     implementation 'com.amazonaws:aws-lambda-java-events:3.1.0'
     testImplementation 'junit:junit:4.12'
-    
+
 }
 
 task packageLibs(type: Zip) {
