--- a/HelloWorldFunction/build.gradle
+++ b/HelloWorldFunction/build.gradle
@@ -6,7 +6,7 @@ plugins {
 repositories {
     mavenCentral()
     maven {
-        url "http://localhost:8081/nexus/content/repositories/releases"
+        url project.nexus_address + "content/repositories/releases/"
     }
 }
 
