--- a/template_all_app.yml
+++ b/template_all_app.yml
@@ -5,7 +5,6 @@ Description: >
 
   Sample SAM Template for hello-sam-app
 
-# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
     Timeout: 20
@@ -26,6 +25,24 @@ Resources:
       StageName:
         Ref: StageName
 
+  HelloWorldFunction:
+    Type: AWS::Serverless::Function 
+    Properties:
+      FunctionName:
+        Fn::Sub: helloworld-app-${StageName}      
+      CodeUri: HelloWorldFunction/build/libs/HelloWorldFunction.jar
+      Handler: helloworld.App::handleRequest
+      Runtime: java8
+      Description: 'Hello From Lambda'     
+      Events:
+        HelloWorld:
+          Type: Api 
+          Properties:
+            Path: /
+            Method: get
+            RestApiId:
+              Ref: RestApi  
+
   RestApiNew:
     Type: AWS::Serverless::Api
     Properties:
@@ -35,48 +52,25 @@ Resources:
         Ref: StageName
 
   HelloWorldFunctionNew:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Type: AWS::Serverless::Function 
     Properties:
       FunctionName:
         Fn::Sub: helloworld-app-new-${StageName}      
-      CodeUri: HelloWorldFunctionNew/build/libs/HelloWorldFunctionLibsNew.jar
+      CodeUri: HelloWorldFunctionNew/build/libs/HelloWorldFunctionNew.jar
       Handler: helloworldnew.App::handleRequest
       Runtime: java8
       Description: 'Hello From Lambda New'
       Events:
         Returntrue:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Type: Api 
           Properties:
             Path: /
             Method: get
             RestApiId:
               Ref: RestApiNew            
 
-  HelloWorldFunction:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
-    Properties:
-      FunctionName:
-        Fn::Sub: helloworld-app-${StageName}      
-      CodeUri: HelloWorldFunction/build/libs/HelloWorldFunction.jar
-      Handler: helloworld.App::handleRequest
-      Runtime: java8
-      Description: 'Hello From Lambda'     
-      # Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
-      #   Variables:
-      #     PARAM1: VALUE
-      Events:
-        HelloWorld:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
-          Properties:
-            Path: /
-            Method: get
-            RestApiId:
-              Ref: RestApi  
-
+  
 Outputs:
-  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
-  # Find out more about other implicit resources you can reference within SAM
-  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
   HelloWorldApi:
     Description: "API Gateway endpoint URL for Prod stage for Hello World function"
     Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${StageName}/"
