change concept job

--- a/HelloWorldFunction/build.gradle
+++ b/HelloWorldFunction/build.gradle
@@ -6,12 +6,12 @@ plugins {
 repositories {
     mavenCentral()
     maven {
-        url project.nexus_address + "content/repositories/releases/"
+        url project.nexusAddress + "content/repositories/releases/"
     }
 }
 
 dependencies {
-    implementation 'hw.libs.common:helloworldlib:0.0.1'
+    implementation 'hw.libs.common:helloworldlib:' + project.libVersion
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.0'
     implementation 'com.amazonaws:aws-lambda-java-events:3.1.0'
     testImplementation 'junit:junit:4.12'
