--- a/aws-hello-world-function/gradle.properties
+++ b/aws-hello-world-function/gradle.properties
@@ -1,2 +1,3 @@
-nexusAddress = http://18.159.141.245:8081/nexus/
-# libVersion = 0.0.19
+#Wed, 09 Sep 2020 11:55:59 +0300
+nexusAddress=http\://18.159.141.245\:8081/nexus/
+libVersion=0.0.15
