--- a/.groovylintrc.json
+++ b/.groovylintrc.json
@@ -1,6 +1,9 @@
 {
     "extends": "recommended",
     "rules": {
+        "DuplicateStringLiteral": {
+            "enabled": false
+        },
         "ImplicitClosureParameter": {
             "enabled": false
         },
@@ -8,6 +11,9 @@
             "enabled": false
         },
         "MethodReturnTypeRequired": {
+            "enabled": false
+        },
+        "NestedBlockDepth": {
             "enabled": false
         },
         "NoDef": {
