--- a/tmpl-aws-hello-world-function-new.yml
+++ b/tmpl-aws-hello-world-function-new.yml
@@ -3,7 +3,7 @@ Transform: AWS::Serverless-2016-10-31
 Description: >
   hello-sam-app
 
-  Sample SAM Template for hello-sam-app
+  Sample SAM Template for hello-sam-app-new
 
 Globals:
   Function:
@@ -16,33 +16,6 @@ Parameters:
     Description: The Lambda Function Stage
 
 Resources:
-
-  RestApi:
-    Type: AWS::Serverless::Api
-    Properties:
-      Name:
-        Fn::Sub: helloworld-app-api-${StageName}
-      StageName:
-        Ref: StageName
-
-  HelloWorldFunction:
-    Type: AWS::Serverless::Function 
-    Properties:
-      FunctionName:
-        Fn::Sub: helloworld-app-${StageName}      
-      CodeUri: aws-hello-world-function/build/libs/aws-hello-world-function.jar
-      Handler: helloworld.App::handleRequest
-      Runtime: java8
-      Description: 'Hello From Lambda'     
-      Events:
-        HelloWorld:
-          Type: Api 
-          Properties:
-            Path: /
-            Method: get
-            RestApiId:
-              Ref: RestApi  
-
   RestApiNew:
     Type: AWS::Serverless::Api
     Properties:
@@ -71,16 +44,6 @@ Resources:
 
   
 Outputs:
-  HelloWorldApi:
-    Description: "API Gateway endpoint URL for Prod stage for Hello World function"
-    Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${StageName}/"
-  HelloWorldFunction:
-    Description: "Hello World Lambda Function ARN"
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
-    Description: "Implicit IAM Role created for Hello World function"
-    Value: !GetAtt HelloWorldFunctionRole.Arn
-
   HelloWorldApiNew:
     Description: "API Gateway endpoint URL for Prod stage for Hello World function"
     Value: !Sub "https://${RestApiNew}.execute-api.${AWS::Region}.amazonaws.com/${StageName}/"
