--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,15 @@ plugins {
     id 'maven'
 }
 
-allprojects{
-    repositories {
-        mavenCentral()
-        maven {
-            url project.nexusAddress + "content/repositories/releases/"
-        }
+repositories {
+    mavenCentral()
+    maven {
+        url project.nexusAddress + "content/repositories/releases/"
     }
 }
 
 dependencies {
-    implementation 'hw.libs.common:helloworldlib:0.0.1'
+    implementation 'hw.libs.common:helloworldlib:' + project.libVersion
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.0'
     implementation 'com.amazonaws:aws-lambda-java-events:3.1.0'
     testImplementation 'junit:junit:4.12'
@@ -26,16 +24,4 @@ task setLibVersion() {
             entry(key: "libVersion", value: libVersion)
         }
     }
-}
-task packageLibs(type: Zip) {
-    into('java/lib') {
-        from configurations.runtimeClasspath
-    }
-    dirMode = 0755
-    fileMode = 0755
-}
-jar {
-  from {
-    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-  }
 }
